# price_regulation_agent

./: .gitignore  README.md  README_MULTI_MODEL.md  README_使用指南.md  pyproject.toml  test_parser_fix.py
configs/: model_config.yaml.example
data/cases/: cases_cot.jsonl
data/eval/: compliant_source_a.jsonl  compliant_source_b.jsonl  compliant_source_c.jsonl  eval_159.jsonl  eval_dataset_v3_final.jsonl  eval_dataset_v4_final.jsonl  eval_meta.json  如何使用第三方大模型验证数据集.md  数据集质量评估指南.md  数据集验证Prompt.md
data/rag/: cases_chunks.jsonl  laws_chunks.jsonl
docs/: eval_results_analysis.md  技术细节与指标说明.md  项目总览与行动指南.md
docs/archive/: agent_implementation_detailed_report.md  agent_research_and_design.md  eval数据集清洗计划.md  rag_analysis.md  rag_flow_analysis_and_improvements.md  中期汇报.md  实施路线图.md  数据采集方案.md  数据集扩充计划.md  数据集扩充计划_v2.md  架构设计.md  汇报PPT大纲.md
docs/后端文档/: STITCH_API_SPEC.md  WEB_BACKEND_GUIDE.md
results/agent/: full_eval_results.json  mvp_test_results.json
results/archive/: cluster_report.json  cluster_report_v2.json  dataset_statistics.json  enrich_log.jsonl  (+8 more)
scripts/: build_golden_testset.py  compare_eval_results.py  diagnose_reranker.py  diagnose_reranker_realistic.py  generate_case_showcase.py  generate_metrics_summary.py  generate_rag_comparison.py  generate_three_way_comparison.py  generate_visualizations.py  rag_build_vector_db.py  rag_extract_laws.py  rag_process_cases.py  rag_test_retrieval.py  recalculate_advanced_metrics.py  run_agent_eval.py  run_baseline_eval.py  run_rag_eval.py  test_baseline_mvp.py  test_list_fields_fix.py
web/: README.md
(+442 files in other folders)
