[project]
name = "price-regulation-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "flagembedding>=1.3.5",
    "python-docx>=1.2.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.3.0",
]
